:lipstick: fix(changelog): align the height of the action buttons

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@ textarea::placeholder {
 }
 
 .action_button {
+  height: 1.9rem;
   font-size: 1.3em;
   margin-top: 0.5em;
   padding: 0 0.5em;
